Update 'backend-tests-go-bkznodbw' component image to: quay.io/rhtap_qe/backend-tests-go-bkznodbw:2398a336fe1c80f3372b82b70491caa2794ac457@sha256:b2fca2c0001841178ffc6eb9c9ef4a80ee44a4c81bfd25e0f45b009ced325cd6

--- a/components/backend-tests-go-bkznodbw/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-bkznodbw/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-bkznodbw
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-bkznodbw:2398a336fe1c80f3372b82b70491caa2794ac457@sha256:b2fca2c0001841178ffc6eb9c9ef4a80ee44a4c81bfd25e0f45b009ced325cd6
+          name: container-image
